other-cel/check-env-vars/.chainsaw-test/pods-bad.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: busybox
  name: badpod01
spec:
  containers:
    - image: busybox:1.35
      name: busybox
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: busybox
  name: badpod02
spec:
  containers:
    - image: busybox:1.35
      name: busybox
    - image: busybox:1.35
      name: busybox02
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: busybox
  name: badpod03
spec:
  containers:
    - image: busybox:1.35
      name: busybox
    - image: busybox:1.35
      name: busybox02
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: busybox
  name: badpod04
spec:
  containers:
    - image: busybox:1.35
      name: busybox
    - image: busybox:1.35
      name: busybox02
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: busybox
  name: badpod05
spec:
  containers:
    - image: busybox:1.35
      name: busybox
    - image: busybox:1.35
      name: busybox02
